# maching_learning

./: 01_ML코드익히기.ipynb  02_회귀성능평가.ipynb  03_분류성능평가.ipynb  04_01_선형회귀(linear_regression).ipynb  04_02_규제(Regularization).ipynb  05_로지스틱회귀(logistic_regression).ipynb  06_01_KNN이해.ipynb  06_02_KNN.ipynb  06_03_KNN복잡도.ipynb  07_결정트리(decision_tree).ipynb  08_02_SVM.ipynb  09_K-Fold교차검증.ipynb  10_01_GridSearch.ipynb  10_02_RandomSearch.ipynb  11_01_앙상블모델링.ipynb  11_02_보팅(Voting).ipynb  11_03_스태킹(Stacking).ipynb  12_01_차원축소.ipynb  12_02_차원축소(신용카드 데이터).ipynb  13_01_군집화_이해.ipynb  13_02_군집화_KMeans.ipynb  13_03_군집화_Gaussian_Mixture_Model.ipynb  13_04_군집화_DBSCAN.ipynb  13_05_군집화_고객군집분석.ipynb  REF02_클래스불균형.ipynb  REF03_ROC_AUC.ipynb  REF04_성능예측(1)_k-fold.ipynb  importance_result.csv  main.py  model_result.csv  pyproject.toml  real_result.csv  tree.dot  tree1.dot  tree2.dot  실습01_ML코드익히기(Boston).ipynb  실습02_ML코드익히기(Iris).ipynb  실습03_ML코드익히기(Admission).ipynb  실습04_회귀성능평가(Happy).ipynb  실습05_회귀성능평가(Boston).ipynb  (+20 more)
data/: result3.csv  result4.csv  result5.csv
data1/: example_cluster.csv
